# codespeak-tg-bot

./: .env.local.example  bot.py  config.py  main.py  pyproject.toml
.codespeak/: build_insight.json  codespeak_state.json  external_apis.json  last_checkpoint_in_user_area.json  last_successful_checkpoint.json  methods_to_test.json  methods_to_test_raw.json  runs_history.json  sha_to_checkpoint.json  spec.processed.md  test_reports.txt
django_app/: urls.py  views.py
django_app/management/commands/: runbot.py
django_app/templates/django_app/: hello_world.html
django_proj/: asgi.py  settings.py  urls.py  wsgi.py
spec/: main.cs.md
tests/: test_views.py
